Hair Curve 'Add' brush initializes strands with 0 radius attr #117101

Closed
opened 2024-01-13 22:33:15 +01:00 by Jose Conseco · 8 comments

System Information
Operating system: Linux-6.6.10-1-MANJARO-x86_64-with-glibc2.38 64 Bits, X11 UI
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 545.29.06

Blender Version
Broken: version: 3.6.7, branch: blender-v3.6-release, commit date: 2023-12-11 16:28, hash: cbd81f283d58
Worked: I think never

Short description of error
In new hair curves sculpt mode, if we use 'Add' brush, new hair curves gets initialized with 0 radius. This makes very poor workflow, since we 99% will have to override it with value 1. Old curves are correctly set with radius 1 by default (yes, they do not use new attributes - but still, default radius 0 is unusable).

Exact steps for others to reproduce the error

  1. Open attached blend file
  2. Click few times on sphere, with 'Add' strand brush
  3. You will see no Curve Profile on new strands - their width is 0.

sculpt_add.blend

**System Information** Operating system: Linux-6.6.10-1-MANJARO-x86_64-with-glibc2.38 64 Bits, X11 UI Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 545.29.06 **Blender Version** Broken: version: 3.6.7, branch: blender-v3.6-release, commit date: 2023-12-11 16:28, hash: `cbd81f283d58` Worked: I think never **Short description of error** In new **hair curves sculpt mode**, if we use 'Add' brush, new hair curves gets initialized with **0 radius**. This makes very poor workflow, since we 99% will have to override it with value 1. Old curves are correctly set with radius 1 by default (yes, they do not use new attributes - but still, default radius 0 is unusable). **Exact steps for others to reproduce the error** 1. Open attached blend file 2. Click few times on sphere, with 'Add' strand brush 3. You will see no Curve Profile on new strands - their width is 0. [sculpt_add.blend](/attachments/643355ca-4404-4854-95d9-35559cff6e35)
Jose Conseco added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-01-13 22:33:16 +01:00
Member

Thanks for the report. Can confirm but not sure whether this is intended. You can avoid this with the help of stored name attribute: image

Thanks for the report. Can confirm but not sure whether this is intended. You can avoid this with the help of stored name attribute: ![image](/attachments/57ac01cc-56e8-4b8d-ae55-872cf9f1167d)
Member

In essence, this is the same problem as in #116577

In essence, this is the same problem as in #116577

In essence, this is the same problem as in #116577

Not really the same. But i know the same bug report was there. And not sure if this was fixed.

> In essence, this is the same problem as in #116577 Not really the same. But i know the same bug report was there. And not sure if this was fixed.
Author

It is bit similar - in the blend file above, the radius attribute was manually created by me.

  • thus each new strand receives 'radius' value = 0.
    In that case 'radius' attribute values is well defined - my complaint is only that it should default to 1.

But if I did not create 'radius' attr manually, then 'add' brush wont generate it too. In that case:

  • radius nodes - defaults to radius value 0
  • 'curve to mesh' defaults non existing 'radius' attr to 1.
    Not sure how other nodes handle non existing 'radius' attribute.
It is bit similar - in the blend file above, the radius attribute was manually created by me. - thus each new strand receives 'radius' value = 0. In that case 'radius' attribute values is well defined - my complaint is only that it should default to 1. But if I did not create 'radius' attr manually, then 'add' brush wont generate it too. In that case: - radius nodes - defaults to radius value 0 - 'curve to mesh' defaults non existing 'radius' attr to 1. Not sure how other nodes handle non existing 'radius' attribute.
Author

Thanks for the report. Can confirm but not sure whether this is intended. You can avoid this with the help of stored name attribute: image

I cannot see the image. But I assume its about using 'named attribute' > exist input ? It will work only if 'radius' attribute does not exist - in that case yes - I can detect it, and init 'radius' to value 1. But if 'radius' attribute does exist, then new strands will receive value 0- making haircrads invisible ( 'Named Attribute' > Exist - will return true).

> Thanks for the report. Can confirm but not sure whether this is intended. You can avoid this with the help of stored name attribute: ![image](/attachments/57ac01cc-56e8-4b8d-ae55-872cf9f1167d) I cannot see the image. But I assume its about using 'named attribute' > exist input ? It will work only if 'radius' attribute does not exist - in that case yes - I can detect it, and init 'radius' to value 1. But if 'radius' attribute does exist, then new strands will receive value 0- making haircrads invisible ( 'Named Attribute' > Exist - will return true).

@JoseConseco I am really really new to contributing to Open Source projects on GitHub, can I please work on this ?

@JoseConseco I am really really new to contributing to Open Source projects on GitHub, can I please work on this ?
@Achyutha-S-Bharadwaj Welcome, here is manual to start: https://developer.blender.org/docs/handbook/new_developers/

@mod_moder Thank You so much

@mod_moder Thank You so much
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-02-27 18:22:21 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#117101
No description provided.